fix: resolve clippy warnings and CI ruff installation
- Fix const_is_empty warning in auroraview-pack test
- Add cfg_attr for parent_mode unused on non-Windows
- Update pre-commit to auto-fix with cargo fmt and clippy --fix
- Include crates/ in Rust file detection pattern
- Use uvx ruff instead of uv pip install for CI

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -61,8 +61,7 @@ jobs:
 
       - name: Check Python formatting (ruff)
         run: |
-          uv pip install ruff
-          ruff check python/ tests/ --select=E,F,W --ignore=E501
+          uvx ruff check python/ tests/ --select=E,F,W --ignore=E501
 
       - name: Cargo check (fast compile check)
         run: |
