--- a/crates/auroraview-cli/Cargo.toml
+++ b/crates/auroraview-cli/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 description = "AuroraView CLI: Command-line interface for WebView applications"
 keywords = ["webview", "cli", "rust", "wry"]
 categories = ["command-line-utilities", "gui"]
+build = "build.rs"
 
 [[bin]]
 name = "auroraview"
@@ -47,12 +48,16 @@ regex = "1.11"
 # File path handling
 dunce = "1.0"
 path-clean = "1.0"
+dirs = "6.0"
 
 # MIME type detection
 mime_guess = "2.0"
 
 # Embed static assets
 rust-embed = "8.5"
+
+[target.'cfg(windows)'.build-dependencies]
+winresource = "0.1"
 
 [dev-dependencies]
 rstest = "0.24"
