fix: correct wry API and image crate import in CLI

--- a/crates/auroraview-cli/Cargo.toml
+++ b/crates/auroraview-cli/Cargo.toml
@@ -53,6 +53,9 @@ dirs = "6.0"
 # MIME type detection
 mime_guess = "2.0"
 
+# Image processing for window icon
+image = { version = "0.25", default-features = false, features = ["png"] }
+
 # Embed static assets
 rust-embed = "8.5"
 
