fix: import testing fixtures in conftest and skip UI tests in CI
- Import webview, webview_bot, test_html fixtures from auroraview.testing
- Add 'ui' marker for tests requiring display environment
- Skip UI integration tests in CI (no display available)
- Tests can run locally with display or xvfb

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -42,6 +42,15 @@ runs:
           ${{ runner.os }}-build-${{ hashFiles('Cargo.lock') }}-
           ${{ runner.os }}-build-
 
+    - name: Setup sccache
+      uses: mozilla-actions/sccache-action@v0.0.9
+
+    - name: Configure sccache
+      shell: bash
+      run: |
+        echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
+        echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
+
     - name: Prefetch Cargo crates (retry)
       shell: bash
       run: |
