--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ test = [
     "pytest-asyncio>=0.21.0",
     "coverage[toml]>=7.0",
     "websockets>=10.0",
+    "playwright>=1.40.0; python_version>='3.8'",
 ]
 playwright = [
     "playwright>=1.40.0; python_version>='3.8'",
