feat: add cross-platform PlaywrightBrowser tests with CI browser installation
- Add Playwright Chromium browser installation step in CI
- Create test_playwright_browser.py for cross-platform UI testing
- Tests AuroraView bridge injection (window.auroraview)
- Tests event system (on/off/trigger)
- Tests API proxy (auroraview.api.*)
- Works on Windows, macOS, and Linux via Playwright's Chromium

PlaywrightBrowser provides:
- Cross-platform testing without native WebView dependency
- Same API as real WebView for frontend code testing
- Bridge script injection for AuroraView compatibility testing

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -97,6 +97,18 @@ runs:
         sudo apt-get update
         sudo apt-get install -y xvfb
 
+    - name: Install Playwright browsers for cross-platform testing
+      shell: bash
+      run: |
+        # Install playwright and browsers for cross-platform UI testing
+        # This allows PlaywrightBrowser tests to run on all platforms
+        if uv pip show playwright > /dev/null 2>&1; then
+          echo "Installing Playwright Chromium browser..."
+          uv run playwright install chromium --with-deps
+        else
+          echo "Playwright not installed, skipping browser installation"
+        fi
+
     - name: Run tests
       id: test
       shell: bash
