fix: correct Qt test paths in pr-checks.yml
Update pytest command to use correct path:
tests/python/integration/test_qt_backend.py instead of tests/test_qt_backend.py

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -259,7 +259,7 @@ jobs:
           QT_OPENGL: software
           QTWEBENGINE_DISABLE_SANDBOX: '1'
         run: |
-          uv run pytest tests/test_qt_backend.py tests/test_qt_lifecycle.py -v --tb=short
+          uv run pytest tests/python/integration/test_qt_backend.py tests/python/integration/test_qt_lifecycle.py -v --tb=short
 
       - name: Upload Qt coverage
         uses: codecov/codecov-action@v5
