ci: add ext-module feature and pytest-qt testing infrastructure
- Add ext-module feature to all maturin build commands in justfile
- Create platform-specific ci-build commands (unix/windows)
- Add Qt6 dependencies for Linux CI (libegl1, libxkbcommon0, libdbus-1-3)
- Add pytest-qt>=4.2.0 to Qt optional dependencies
- Create python/auroraview/testing/qt.py with Qt testing utilities
- Add qt_webview and qt_helper fixtures in conftest.py
- Remove HAS_QT skip conditions from Qt tests (tests should fail if Qt unavailable)
- Increase timer performance threshold to 100ms for macOS CI tolerance

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -67,14 +67,8 @@ runs:
       id: build
       shell: bash
       run: |
-        uv pip install maturin
-        if [ "$RUNNER_OS" = "Windows" ]; then
-          echo "Building with Windows features: win-webview2,ext-module,python-bindings"
-          uv run maturin develop --features "win-webview2,ext-module,python-bindings"
-        else
-          echo "Building with features: ext-module,python-bindings"
-          uv run maturin develop --features "ext-module,python-bindings"
-        fi
+        # Use just command for consistent builds across local and CI
+        just ci-build
       env:
         RUST_BACKTRACE: 1
         CARGO_HTTP_TIMEOUT: '600'
