--- a/.github/actions/setup-auroraview/action.yml
+++ b/.github/actions/setup-auroraview/action.yml
@@ -82,6 +82,11 @@ runs:
           libxfixes-dev \
           libxtst-dev \
           pkg-config
+        # Qt6 dependencies for PySide6
+        sudo apt-get install -y \
+          libegl1 \
+          libxkbcommon0 \
+          libdbus-1-3
 
 
     - name: Install dependencies
