fix: add x-release-please-version tag to version fields
- Add x-release-please-version comment to Cargo.toml workspace.package.version

- Add x-release-please-version comment to pyproject.toml project.version

- Update release-please-config.json jsonpath to point to workspace.package.version

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -15,7 +15,7 @@
         {
           "type": "toml",
           "path": "Cargo.toml",
-          "jsonpath": "$.package.version"
+          "jsonpath": "$.workspace.package.version"
         },
         {
           "type": "toml",
