--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.2.22"
+version = "0.2.22" # x-release-please-version
 edition = "2021"
 # CXX-Qt 0.7 requires Rust 1.77+ for cargo:: syntax in build scripts
 rust-version = "1.77"
