feat: add Python 3.7 support with separate non-abi3 builds
- Change abi3 minimum version from py37 to py38 (PyO3 0.27 limitation)
- Add separate Python 3.7 build jobs for Linux, Windows, and macOS
- Use older runners (ubuntu-22.04, windows-2019, macos-13) for Python 3.7 compatibility
- Python 3.8+ continues to use abi3 single-wheel builds
- Update build-wheel action to handle Python 3.7 specific cases

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -42,9 +42,11 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
+        # Allow pre-release versions for older Python (3.7)
+        allow-prereleases: false
 
     - name: Install uv
-      if: inputs.test-wheel == 'true'
+      if: inputs.test-wheel == 'true' && inputs.python-version != '3.7'
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ inputs.python-version }}
@@ -79,8 +81,9 @@ runs:
           ~/.cargo/registry/cache/
           ~/.cargo/git/db/
           target/
-        key: ${{ runner.os }}-${{ inputs.target || 'default' }}-cargo-wheel-${{ hashFiles('Cargo.lock') }}
+        key: ${{ runner.os }}-${{ inputs.target || 'default' }}-py${{ inputs.python-version }}-cargo-wheel-${{ hashFiles('Cargo.lock') }}
         restore-keys: |
+          ${{ runner.os }}-${{ inputs.target || 'default' }}-py${{ inputs.python-version }}-cargo-wheel-
           ${{ runner.os }}-${{ inputs.target || 'default' }}-cargo-wheel-
           ${{ runner.os }}-cargo-
 
