--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,8 @@ auroraview = "auroraview.__main__:main"
 [tool.maturin]
 python-source = "python"
 module-name = "auroraview._core"
-features = ["python-bindings", "pyo3/extension-module", "pyo3/abi3-py37"]
+# Note: abi3-py38 for Python 3.8+, Python 3.7 requires separate non-abi3 build
+features = ["python-bindings", "pyo3/extension-module", "pyo3/abi3-py38"]
 bindings = "pyo3"
 # Include native Qt libraries for qt_native module
 include = [
